# aweeto

./: db.sqlite3  manage.py  pyproject.toml  pytests.ini
ads/: admin.py  filtersets.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
ads/fixtures/: ad.json  category.json
ads/migrations/: 0001_initial.py  0002_auto_20230704_1425.py  0002_initial.py  0003_alter_ad_id_alter_category_id.py  0003_load_intial_data.py  0004_adselection.py  0004_location_alter_ad_options_alter_category_options_and_more.py  0005_alter_adselection_options.py  0005_remove_ad_address_alter_ad_author.py  0006_category_slug_alter_ad_name_alter_ad_price.py  0006_rename_location_id_user_location.py  0007_auto_20230717_1633.py  0007_reload_intial_data.py  0008_alter_ad_image.py  0008_alter_category_slug.py  0009_alter_ad_description.py  0009_alter_ad_image.py  0010_alter_ad_image.py  0011_remove_user_location_user_location.py  0012_alter_location_lat_alter_location_lng.py  0013_alter_user_options.py
ads/views/: ad.py  cat.py  selection.py
avwto/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: location.json  user.json
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selection/: selection_create_test.py
users/: admin.py  models.py  serializers.py  urls.py  utils.py  validators.py  views.py
users/fixtures/: user.json  user_age.json
users/migrations/: 0001_initial.py  0002_load_intial_data.py  0003_remove_user_age_user_birth_date_alter_user_email.py  0004_reload_intial_data.py  (+1 more)
(+1 files in other folders)
